manifests/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: slotegrator-service
  labels:
    app: slotegrator-app
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
    name: http
  selector:
    app: slotegrator-app
