manifests/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: slotegrator-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: dev.slotegrator.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: slotegrator-service
                port:
                  number: 80
